refactoring, modify result  and readme